--- a/homework6/homework6.ipynb
+++ b/homework6/homework6.ipynb
@@ -12,62 +12,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 124,
    "id": "f5237e1a-0cff-45a3-863a-8c1c4ef36fe8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[90], line 28\u001b[0m\n\u001b[0;32m     25\u001b[0m                 prime_star_data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mappend(prime_star_data, \u001b[38;5;28mlist\u001b[39m)\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m(prime_star_data)\n\u001b[1;32m---> 28\u001b[0m containsPrimes \u001b[38;5;241m=\u001b[39m containsPrimes(star_data)\n\u001b[0;32m     29\u001b[0m containsPrimes\n",
-      "Cell \u001b[1;32mIn[90], line 22\u001b[0m, in \u001b[0;36mcontainsPrimes\u001b[1;34m(star_data)\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m star_data:\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m i:\n\u001b[1;32m---> 22\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m j\u001b[38;5;241m%\u001b[39mi \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     23\u001b[0m             count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     24\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m count \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m:\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 2,  3,  5],\n",
+       "       [11, 13, 17],\n",
+       "       [ 7, 10, 13]])"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#1\n",
     "\n",
     "star_data = np.array([[2, 3, 5], [4, 6, 8], [11, 13, 17], [7, 10, 13]])\n",
-    "prime_star_data = np.array([])\n",
     "\n",
+    "def containsPrimes(num):\n",
+    "    for i in range(2, int(np.sqrt(num))+1):\n",
+    "        if (num % i) == 0:\n",
+    "            return False\n",
+    "        else:\n",
+    "            return True\n",
     "\n",
-    "# def containsPrimes(star_data):\n",
-    "#     count = 0\n",
-    "#     for list in range(len(star_data)):\n",
-    "#         for i in star_data[list]:\n",
-    "#             for j in range (1, i+1):\n",
-    "#                 if i%j == 0:\n",
-    "#                     count += 1\n",
-    "#             if count == 2:\n",
-    "#                  np.append(prime_star_data, list)\n",
-    "#     return(prime_star_data)\n",
+    "result = []\n",
+    "for row in star_data:\n",
+    "    if any (containsPrimes(num) for num in row):\n",
+    "        result.append(row)\n",
+    "prime_star_data = np.array(result)\n",
     "\n",
-    "def containsPrimes(star_data):\n",
-    "    count = 0\n",
-    "    for i in star_data:\n",
-    "        for j in i:\n",
-    "            if j%i == 0:\n",
-    "                count += 1\n",
-    "        if count == 2:\n",
-    "                prime_star_data = np.append(prime_star_data, list)\n",
-    "    return(prime_star_data)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "containsPrimes = containsPrimes(star_data)\n",
-    "containsPrimes"
+    "prime_star_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 125,
    "id": "7e6a1517-0287-4a2e-bbd0-141b308b7762",
    "metadata": {},
    "outputs": [
@@ -84,7 +69,7 @@
        "       [0, 0, 0, 0, 0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 126,
    "id": "9ce1db16-dfe8-47e0-8c17-ee909d84ddb7",
    "metadata": {},
    "outputs": [
@@ -121,7 +106,7 @@
        "       [0, 0, 0, 0, 0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 127,
    "id": "f18eb54b-7581-48f0-8887-fec77138ad9f",
    "metadata": {},
    "outputs": [
@@ -153,7 +138,7 @@
        "       [0, 1, 0, 1, 0, 1, 0, 1]])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 128,
    "id": "979ca13a-3551-4b71-b655-acd403e1f7e6",
    "metadata": {},
    "outputs": [
@@ -176,16 +161,16 @@
      "data": {
       "text/plain": [
        "array([[0, 1, 0, 1, 0, 1, 0, 1],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
        "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
        "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
        "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0]])"
+       "       [1, 0, 1, 0, 1, 0, 1, 0]])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,17 +189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 130,
    "id": "c7afb04d-922f-4fd2-aeea-6c3de0a96ac2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['g  a  l  a  x  y  ', 'c  l  u  s  t  e  r  s  ']"
+       "['g   a   l   a   x   y   ', 'c   l   u   s   t   e   r   s   ']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,38 +223,27 @@
     "        newstringarr.append(newstr)\n",
     "    return newstringarr\n",
     "\n",
-    "uni_expansion = expansion(universe, 2)\n",
+    "uni_expansion = expansion(universe, 3)\n",
     "uni_expansion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 131,
    "id": "625be499-d3dd-4e8c-8853-a604228a5356",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 916 1372 1808 1927 1998]\n",
-      " [ 905 1096 1274 1855 1910]\n",
-      " [ 560  601  930  947 1970]\n",
-      " [ 707 1288 1389 1618 1954]\n",
-      " [ 508  788 1257 1344 1925]]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([[1372],\n",
-       "       [1096],\n",
-       "       [ 601],\n",
-       "       [1288],\n",
-       "       [ 788]])"
+       "array([[1122, 1164, 1245, 1639, 1657],\n",
+       "       [ 621,  738,  878, 1268, 1562],\n",
+       "       [ 713,  965, 1203, 1947, 1994],\n",
+       "       [1362, 1419, 1450, 1650, 1898],\n",
+       "       [1193, 1344, 1421, 1879, 1975]])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,20 +253,38 @@
     "\n",
     "stars = np.random.randint(500, 2000, (5, 5))\n",
     "sorted_stars = np.sort(stars)[::-1]\n",
+    "sorted_stars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "9d4d34aa-07c4-4c18-b319-0656bf455f21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1164],\n",
+       "       [ 738],\n",
+       "       [ 965],\n",
+       "       [1419],\n",
+       "       [1344]])"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#4 continued\n",
     "\n",
     "lowest = sorted_stars[0:5, 1:2]\n",
     "\n",
     "lowest_stars = np.array(lowest)\n",
     "lowest_stars"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d4d34aa-07c4-4c18-b319-0656bf455f21",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
