--- a/homework9/homework9.ipynb
+++ b/homework9/homework9.ipynb
@@ -147,9 +147,6 @@
     "\n",
     "temp_data = temp_data.sort_values(by='dt', ascending = True)\n",
     "\n",
-    "# temp_data = temp_data[temp_data['dt'].str.startswith('2')]\n",
-    "\n",
-    "# temp_data = temp_data.iloc[626287:len(temp_data)]\n",
     "temp_data = temp_data.where(temp_data['dt']>='2000')\n",
     "temp_data = temp_data.dropna()\n",
     "\n",
@@ -158,25 +155,114 @@
     "south_dakota = temp_data[temp_data['State'].str.startswith('South Dakota')]\n",
     "\n",
     "sorted_temps = pd.concat([wyoming, nebraska, south_dakota])\n",
-    "sorted_temps\n",
-    "\n",
-    "#Dates aren't in linear order\n",
-    "#Group the dates by list descending = true"
+    "sorted_temps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 94,
    "id": "2519cd02-80f4-48d8-ae30-a7b74e22d387",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (2564292274.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[54], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    mean_temp = sorted_temps.groupby(['AverageTemperature', 'dt']).agg(MeanTempOnDay = ('AverageTemperature','mean').reset_index()\u001b[0m\n\u001b[1;37m                                                                                                                                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AverageTemperature</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dt</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000-01-01</th>\n",
+       "      <td>-4.072000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-02-01</th>\n",
+       "      <td>-0.205000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-03-01</th>\n",
+       "      <td>3.642667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-04-01</th>\n",
+       "      <td>7.609667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-05-01</th>\n",
+       "      <td>14.255000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-05-01</th>\n",
+       "      <td>13.196000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-06-01</th>\n",
+       "      <td>18.783667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-07-01</th>\n",
+       "      <td>22.110333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-08-01</th>\n",
+       "      <td>21.890000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-09-01</th>\n",
+       "      <td>18.953000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>165 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            AverageTemperature\n",
+       "dt                            \n",
+       "2000-01-01           -4.072000\n",
+       "2000-02-01           -0.205000\n",
+       "2000-03-01            3.642667\n",
+       "2000-04-01            7.609667\n",
+       "2000-05-01           14.255000\n",
+       "...                        ...\n",
+       "2013-05-01           13.196000\n",
+       "2013-06-01           18.783667\n",
+       "2013-07-01           22.110333\n",
+       "2013-08-01           21.890000\n",
+       "2013-09-01           18.953000\n",
+       "\n",
+       "[165 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -184,7 +270,20 @@
     "\n",
     "# mean_temp = sorted_temps[sorted_temps['AverageTemperature'] == 'call'].groupby('dt').agg()\n",
     "\n",
-    "mean_temp = sorted_temps.groupby(['AverageTemperature', 'dt']).agg(MeanTempOnDay = ('AverageTemperature','mean').reset_index()"
+    "\n",
+    "mean_temp = sorted_temps.groupby('dt')['AverageTemperature'].mean()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# type(sorted_temps['AverageTemperature'].iloc[1])\n",
+    "\n",
+    "\n",
+    "\n",
+    "# mean_temp = sorted_temps.groupby(['AverageTemperature', 'dt']).mean()\n",
+    "#.agg(MeanTempOnDay = ('AverageTemperature','mean')).reset_index()\n",
+    "mean_temp\n",
+    "avg_temps = pd.DataFrame(mean_temp).res\n",
+    "avg_temps"
    ]
   },
   {
