--- a/homework9/homework9.ipynb
+++ b/homework9/homework9.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 95,
    "id": "2519cd02-80f4-48d8-ae30-a7b74e22d387",
    "metadata": {},
    "outputs": [
@@ -185,82 +185,89 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>AverageTemperature</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>dt</th>\n",
-       "      <th></th>\n",
+       "      <th>AverageTemperature</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2000-01-01</th>\n",
+       "      <th>0</th>\n",
+       "      <td>2000-01-01</td>\n",
        "      <td>-4.072000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2000-02-01</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2000-02-01</td>\n",
        "      <td>-0.205000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2000-03-01</th>\n",
+       "      <th>2</th>\n",
+       "      <td>2000-03-01</td>\n",
        "      <td>3.642667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2000-04-01</th>\n",
+       "      <th>3</th>\n",
+       "      <td>2000-04-01</td>\n",
        "      <td>7.609667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2000-05-01</th>\n",
+       "      <th>4</th>\n",
+       "      <td>2000-05-01</td>\n",
        "      <td>14.255000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-05-01</th>\n",
+       "      <th>160</th>\n",
+       "      <td>2013-05-01</td>\n",
        "      <td>13.196000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-06-01</th>\n",
+       "      <th>161</th>\n",
+       "      <td>2013-06-01</td>\n",
        "      <td>18.783667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-07-01</th>\n",
+       "      <th>162</th>\n",
+       "      <td>2013-07-01</td>\n",
        "      <td>22.110333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-08-01</th>\n",
+       "      <th>163</th>\n",
+       "      <td>2013-08-01</td>\n",
        "      <td>21.890000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-09-01</th>\n",
+       "      <th>164</th>\n",
+       "      <td>2013-09-01</td>\n",
        "      <td>18.953000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>165 rows × 1 columns</p>\n",
+       "<p>165 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            AverageTemperature\n",
-       "dt                            \n",
-       "2000-01-01           -4.072000\n",
-       "2000-02-01           -0.205000\n",
-       "2000-03-01            3.642667\n",
-       "2000-04-01            7.609667\n",
-       "2000-05-01           14.255000\n",
-       "...                        ...\n",
-       "2013-05-01           13.196000\n",
-       "2013-06-01           18.783667\n",
-       "2013-07-01           22.110333\n",
-       "2013-08-01           21.890000\n",
-       "2013-09-01           18.953000\n",
+       "             dt  AverageTemperature\n",
+       "0    2000-01-01           -4.072000\n",
+       "1    2000-02-01           -0.205000\n",
+       "2    2000-03-01            3.642667\n",
+       "3    2000-04-01            7.609667\n",
+       "4    2000-05-01           14.255000\n",
+       "..          ...                 ...\n",
+       "160  2013-05-01           13.196000\n",
+       "161  2013-06-01           18.783667\n",
+       "162  2013-07-01           22.110333\n",
+       "163  2013-08-01           21.890000\n",
+       "164  2013-09-01           18.953000\n",
        "\n",
-       "[165 rows x 1 columns]"
+       "[165 rows x 2 columns]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,21 +275,10 @@
    "source": [
     "# 1.2\n",
     "\n",
-    "# mean_temp = sorted_temps[sorted_temps['AverageTemperature'] == 'call'].groupby('dt').agg()\n",
-    "\n",
-    "\n",
     "mean_temp = sorted_temps.groupby('dt')['AverageTemperature'].mean()\n",
     "\n",
-    "\n",
-    "\n",
-    "# type(sorted_temps['AverageTemperature'].iloc[1])\n",
-    "\n",
-    "\n",
-    "\n",
-    "# mean_temp = sorted_temps.groupby(['AverageTemperature', 'dt']).mean()\n",
-    "#.agg(MeanTempOnDay = ('AverageTemperature','mean')).reset_index()\n",
     "mean_temp\n",
-    "avg_temps = pd.DataFrame(mean_temp).res\n",
+    "avg_temps = pd.DataFrame(mean_temp).reset_index()\n",
     "avg_temps"
    ]
   },
