Final equations done

--- a/homework9/homework9.ipynb
+++ b/homework9/homework9.ipynb
@@ -574,6 +574,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 100,
+   "id": "7bedcbc9-2fa4-483c-b6cb-86be118d5886",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'13.899598480916051*sin(0.5232810738849062*x + -1.6038938808330752) + 8.122950283731845'"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "equation1 = f\"{a}*sin({b}*x + {c}) + {d}\"\n",
+    "equation1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 91,
    "id": "e09d76bd-0ef8-49bf-b5cb-f2ef0ab3bad5",
    "metadata": {},
@@ -727,11 +749,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "43e114d4-6d2d-4e41-8eb6-e23433913aca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equation2 = f\"{m}*x + {b}\"\n",
+    "equation2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1eeeb28c-c626-4b38-b82d-34a31738b9cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A linear model does seem equivalent, "
+    "# A linear model does seem equivalent."
    ]
   }
  ],
