Finished linear explanation

--- a/homework9/homework9.ipynb
+++ b/homework9/homework9.ipynb
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 103,
    "id": "7bedcbc9-2fa4-483c-b6cb-86be118d5886",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
        "'13.899598480916051*sin(0.5232810738849062*x + -1.6038938808330752) + 8.122950283731845'"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,10 +748,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "id": "43e114d4-6d2d-4e41-8eb6-e23433913aca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'-0.09550360162816729*x + 0.5232810738849062'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "equation2 = f\"{m}*x + {b}\"\n",
     "equation2"
@@ -764,7 +775,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A linear model does seem equivalent."
+    "# A linear model does seem equivalent, since it accurately goes down step by step with all of the different points. It even goes in different steps as well."
    ]
   }
  ],
