--- a/homework10/homework10prompt.ipynb
+++ b/homework10/homework10prompt.ipynb
@@ -31,7 +31,7 @@
     "id": "TrKnLxnAZ9sD"
    },
    "source": [
-    "# HW 9 - Advanced Plotting\n",
+    "# HW 10 - Advanced Plotting\n",
     "### Due November 11, 2024 at 11:59pm\n",
     "Welcome to your last problem set of the semester! (\\*confetti\\*) It's time for the hardest but also coolest homework of the course. Have fun!"
    ]
@@ -46,8 +46,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {
     "executionInfo": {
      "elapsed": 222,
@@ -61,28 +60,26 @@
     },
     "id": "90Iwj0jbalNy"
    },
-   "outputs": [],
    "source": [
-    "# @markdown Plot these functions on a 2 X 2 grid of subplots (4 plots total). Use fun colormaps!\n",
+    " @markdown Plot these functions on a 2 X 2 grid of subplots (4 plots total). Use fun colormaps!\n",
     "\n",
     "\n",
-    "# @markdown Plot 1 (Top Left):\n",
+    " @markdown Plot 1 (Top Left):\n",
     "\n",
-    "# @markdown $$ f(x,y) = \\frac{sin(xy) * sin(1-(9x)^2 + (9y)^2)}{9} $$\n",
-    "# @markdown Plot 2 (Top Right):\n",
-    "# @markdown $$ f(x,y) = (0.4^2 -(0.6-(x^2+y^2)^{\\!1/2})^2)^{\\!1/2} $$\n",
-    "# @markdown Plot 3 (Bottom Left):\n",
-    "# @markdown $$ f(x, y) = \\frac{\\tanh(5x)}{y + 0.1}$$\n",
-    "# @markdown Plot 4 (Bottom Right)\"\n",
-    "# @markdown $$ f(x, y) = \\exp(-5((x - 0.2)^2 + (y + 0.3)^2))$$\n",
+    " @markdown $$ f(x,y) = \\frac{sin(xy) * sin(1-(9x)^2 + (9y)^2)}{9} $$\n",
+    " @markdown Plot 2 (Top Right):\n",
+    " @markdown $$ f(x,y) = (0.4^2 -(0.6-(x^2+y^2)^{\\!1/2})^2)^{\\!1/2} $$\n",
+    " @markdown Plot 3 (Bottom Left):\n",
+    " @markdown $$ f(x, y) = \\frac{\\tanh(5x)}{y + 0.1}$$\n",
+    " @markdown Plot 4 (Bottom Right)\"\n",
+    " @markdown $$ f(x, y) = \\exp(-5((x - 0.2)^2 + (y + 0.3)^2))$$\n",
     "\n",
-    "# @markdown Each subplot should have it's own title, and x and y labels for each plot. Each of these is an interesting shape or structure. Create a markdown cell below your plotting cell describing what you see in each plot.\n",
+    " @markdown Each subplot should have it's own title, and x and y labels for each plot. Each of these is an interesting shape or structure. Create a markdown cell below your plotting cell describing what you see in each plot.\n",
+    " @markdown Challenge: Use the same colormap for the whole figure (all 4 subplots).\n",
     "\n",
-    "# @markdown Challenge: Use the same colormap for the whole figure (all 4 subplots).\n",
+    " @markdown *Hint: Some of the functions may require a different domain (for the x values) for the function to be defined. Make sure you take this into account.*\n",
     "\n",
-    "# @markdown *Hint: Some of the functions may require a different domain (for the x values) for the function to be defined. Make sure you take this into account.*\n",
-    "\n",
-    "# Your code here"
+    " Your code here"
    ]
   },
   {
@@ -95,8 +92,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {
     "executionInfo": {
      "elapsed": 222,
@@ -110,17 +106,16 @@
     },
     "id": "n9en7sMAbaQO"
    },
-   "outputs": [],
    "source": [
-    "# @markdown This problem focuses on generating and visualizing random data in two different types of plots. First, you will create three lists of random numbers, each containing 50 elements, with values ranging from 0 to 200. Then, you'll create two instead of vertical subplots:\n",
+    "@markdown This problem focuses on generating and visualizing random data in two different types of plots. First, you will create three lists of random numbers, each containing 50 elements, with values ranging from 0 to 200. Then, you'll create two instead of vertical subplots:\n",
     "\n",
-    "# @markdown - The left plot should display the first list of random data as a blue line with a line width of 5, and the second list in green with a dotted line style.\n",
+    "@markdown - The left plot should display the first list of random data as a blue line with a line width of 5, and the second list in green with a dotted line style.\n",
     "\n",
-    "# @markdown - The right plot should be a scatter plot of the third list, using purple triangles as markers. The x-coordinate should correspond to the position of each element in the list.\n",
+    "@markdown - The right plot should be a scatter plot of the third list, using purple triangles as markers. The x-coordinate should correspond to the position of each element in the list.\n",
     "\n",
-    "# @markdown Make sure to add appropriate titles and legends to each subplot.\n",
+    "@markdown Make sure to add appropriate titles and legends to each subplot.\n",
     "\n",
-    "# Your code here"
+    "Your code here"
    ]
   },
   {
@@ -192,8 +187,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {
     "cellView": "form",
     "executionInfo": {
@@ -208,17 +202,15 @@
     },
     "id": "rMDEXnTYiR_V"
    },
-   "outputs": [],
    "source": [
-    "# @title Simulate a Point Source:\n",
-    "# @markdown Start by creating a 2D image (plot) of size 50×50 pixels. Represent a point source by setting the very center pixel (25,25) to have a brightness of 1.0, while all other pixels should have a value of 0.0.\n",
+    "@title Simulate a Point Source:\n",
+    "@markdown Start by creating a 2D image (plot) of size 50×50 pixels. Represent a point source by setting the very center pixel (25,25) to have a brightness of 1.0, while all other pixels should have a value of 0.0.\n",
     "\n",
-    "# Your code here"
+    "Your code here"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {
     "cellView": "form",
     "executionInfo": {
@@ -233,28 +225,26 @@
     },
     "id": "WonZCuEjiR5_"
    },
-   "outputs": [],
    "source": [
-    "# @title Simulate the Point Spread:\n",
-    "# @markdown Now, model a PSF by plotting a 2D Gaussian function to simulate the spread of light from the point source. The Gaussian function is defined as:\n",
+    "@title Simulate the Point Spread:\n",
+    "@markdown Now, model a PSF by plotting a 2D Gaussian function to simulate the spread of light from the point source. The Gaussian function is defined as:\n",
     "\n",
-    "# @markdown $$ \\text{PSF}(x, y) = A \\cdot \\exp\\left(-\\frac{(x - x_0)^2}{2\\sigma^2} - \\frac{(y - y_0)^2}{2\\sigma^2}\\right) $$\n",
+    "@markdown $$ \\text{PSF}(x, y) = A \\cdot \\exp\\left(-\\frac{(x - x_0)^2}{2\\sigma^2} - \\frac{(y - y_0)^2}{2\\sigma^2}\\right) $$\n",
     "\n",
-    "# @markdown Where:\n",
-    "# @markdown - $A$ is the amplitude (brightness) of the point source.\n",
-    "# @markdown - $x_0$, $y_0$ are the coordinates of the center of the PSF.\n",
-    "# @markdown - σ controls how much the light spreads out from the center.\n",
+    "@markdown Where:\n",
+    "@markdown - $A$ is the amplitude (brightness) of the point source.\n",
+    "@markdown - $x_0$, $y_0$ are the coordinates of the center of the PSF.\n",
+    "@markdown - σ controls how much the light spreads out from the center.\n",
     "\n",
-    "# @markdown Use $A = 1.0$, center the PSF at (25, 25) and use $\\sigma = 3$.\n",
+    "@markdown Use $A = 1.0$, center the PSF at (25, 25) and use $\\sigma = 3$.\n",
     "\n",
-    "# @markdown This part of the problem is very similar to problem #1 in this homework assignment.\n",
+    "@markdown This part of the problem is very similar to problem #1 in this homework assignment.\n",
     "\n",
-    "# Your code here"
+    "Your code here"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {
     "cellView": "form",
     "executionInfo": {
@@ -269,31 +259,42 @@
     },
     "id": "4PJl5MIyiRxs"
    },
-   "outputs": [],
    "source": [
-    "# @title Visualize the Transition:\n",
-    "# @markdown Create two plots (horizontal subplots):\n",
+    "@title Visualize the Transition:\n",
+    "@markdown Create two plots (horizontal subplots):\n",
     "\n",
-    "# @markdown The first plot should display the original point source (a single bright pixel).\n",
-    "# @markdown The second plot should display the resulting point spread function (PSF), showing how the light spreads out from the point source.\n",
+    "@markdown The first plot should display the original point source (a single bright pixel).\n",
+    "@markdown The second plot should display the resulting point spread function (PSF), showing how the light spreads out from the point source.\n",
     "\n",
-    "# @markdown All you should be doing at this point is just taking your plots from step 1 and step 2 and turning them into subplots.\n",
+    "@markdown All you should be doing at this point is just taking your plots from step 1 and step 2 and turning them into subplots.\n",
     "\n",
-    "# Your code here"
+    "Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cellView": "form",
+    "id": "Zfi94LJ8j7jU"
+   },
+   "source": [
+    "<!-- # @title Bonus (just for fun):\n",
+    "@markdown Try changing the value of $\\sigma$ How does this affect the spread of light in the PSF? -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "@markdown title bonus, how does sigma affect the spread of light in PSF?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "cellView": "form",
-    "id": "Zfi94LJ8j7jU"
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "# @title Bonus (just for fun):\n",
-    "# @markdown Try changing the value of $\\sigma$ How does this affect the spread of light in the PSF?"
-   ]
+   "source": []
   }
  ],
  "metadata": {
