--- a/homework9/homework9.ipynb
+++ b/homework9/homework9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 107,
    "id": "8887022f-81df-43d7-9666-d3732b88f16c",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 108,
    "id": "8a98646e-1513-487c-85ba-b83e2fc79b08",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "[495 rows x 3 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 109,
    "id": "2519cd02-80f4-48d8-ae30-a7b74e22d387",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "[165 rows x 2 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 110,
    "id": "605b906e-ece4-4d2d-97ba-6dbe0c292b26",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 111,
    "id": "a54292ef-5fbd-4c5b-be4d-8c7fe850da41",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
        "[165 rows x 3 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 112,
    "id": "c396f43a-361d-453a-9a99-7ad2d6858cef",
    "metadata": {},
    "outputs": [],
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 113,
    "id": "a35940f8-b5a1-4595-9414-7de2e4689c6f",
    "metadata": {},
    "outputs": [],
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 114,
    "id": "017dc9d2-ab96-4bf4-97d7-0778925ccc10",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 115,
    "id": "218548ed-e806-4b26-a02c-d7d077fbb754",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
        " 0.16050591279460905]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 116,
    "id": "be62df4e-6c2e-4105-908f-625bb7afb55b",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
        " 'd: 8.122950283731845 +/- 0.16050591279460905']"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 117,
    "id": "7bedcbc9-2fa4-483c-b6cb-86be118d5886",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
        "'13.899598480916051*sin(0.5232810738849062*x + -1.6038938808330752) + 8.122950283731845'"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 118,
    "id": "e09d76bd-0ef8-49bf-b5cb-f2ef0ab3bad5",
    "metadata": {},
    "outputs": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 119,
    "id": "8d651916-8f68-455d-80c1-595ae774302c",
    "metadata": {},
    "outputs": [],
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 120,
    "id": "69009023-163c-49f5-9496-643081bbc968",
    "metadata": {},
    "outputs": [
@@ -662,7 +662,7 @@
        "4.573882326460826"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,49 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "2a42ef5f-003c-4df4-a744-0e9c01324432",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.09550360162816729"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "id": "760a9eea-bd0e-4a44-b273-1a7d5d2613b4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "104.61559171282434"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "e"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 121,
    "id": "bcefc24a-2d0f-44b3-b079-971c2b2a2da2",
    "metadata": {},
    "outputs": [
@@ -727,7 +685,7 @@
        " 'e: 104.61559171282434 +/- 0.0003465545193918657']"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,29 +706,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 122,
    "id": "43e114d4-6d2d-4e41-8eb6-e23433913aca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'-0.09550360162816729*x + 0.5232810738849062'"
+       "'-0.09550360162816729*x + 104.61559171282434'"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "equation2 = f\"{m}*x + {b}\"\n",
+    "equation2 = f\"{m}*x + {e}\"\n",
     "equation2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "id": "1eeeb28c-c626-4b38-b82d-34a31738b9cb",
    "metadata": {},
    "outputs": [],
