--- a/tidal_waves_final_project/Astro98Test_Olivia.ipynb
+++ b/tidal_waves_final_project/Astro98Test_Olivia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "81bfc2f7-edef-4b20-8b73-b48cd130ab2c",
    "metadata": {},
    "outputs": [
@@ -18,6 +18,8 @@
     }
    ],
    "source": [
+    "#Test code done by project partner Olivia Silva\n",
+    "\n",
     "%matplotlib inline\n",
     "from PIL import Image\n",
     "import math\n",
